tests/snapshots/fixtures__enum-ordinal-reused.snap
---
source: tests/fixtures.rs
expression: render_output(&output)
---
status: 1
stdout:
lint: Status.enum[1]
  severity: error
  reason: enum value name changed
  detail: disabled -> deleted
stderr:
