tests/snapshots/fixtures__field-type-changed.snap
---
source: tests/fixtures.rs
expression: render_output(&output)
---
status: 1
stdout:
incompatible: User.field[1]
  reason: field type changed
  before: email: Text
  after: primaryEmail: Data
stderr:
