tests/snapshots/fixtures__list-element-type-changed.snap
---
source: tests/fixtures.rs
expression: render_output(&output)
---
status: 1
stdout:
incompatible: User.field[0]
  reason: field type changed
  before: tags: List(Text)
  after: tags: List(Data)
stderr:
