tests/snapshots/fixtures__method-param-type-changed.snap
---
source: tests/fixtures.rs
expression: render_output(&output)
---
status: 1
stdout:
incompatible: Users.method[0]
  reason: method signature changed
  before: get (id :UInt64) -> (email :Text)
  after: get (id :Text) -> (email :Text)
stderr:
