tests/snapshots/fixtures__method-result-type-changed.snap
---
source: tests/fixtures.rs
expression: render_output(&output)
---
status: 1
stdout:
incompatible: Users.method[0]
  reason: method signature changed
  before: get (id :UInt64) -> (email :Text)
  after: get (id :UInt64) -> (email :Data)
stderr:
