tests/snapshots/fixtures__named-type-changed.snap
---
source: tests/fixtures.rs
expression: render_output(&output)
---
status: 1
stdout:
incompatible: User.field[0]
  reason: field type changed
  before: contact: Email
  after: contact: Phone
stderr:
