tests/snapshots/fixtures__node-kind-changed.snap
---
source: tests/fixtures.rs
expression: render_output(&output)
---
status: 1
stdout:
incompatible: Status
  reason: node kind changed
  before: Struct
  after: Enum
stderr:
