tests/snapshots/fixtures__removed-enum-value.snap
---
source: tests/fixtures.rs
expression: render_output(&output)
---
status: 1
stdout:
incompatible: Status.enum[1]
  reason: enum value was removed
  before: disabled
stderr:
