tests/snapshots/fixtures__removed-field.snap
---
source: tests/fixtures.rs
expression: render_output(&output)
---
status: 1
stdout:
incompatible: User.field[1]
  reason: field was removed
  before: email: Text
stderr:
